[gd_scene load_steps=13 format=2]

[ext_resource path="res://assets/images/loot/flatfish.png" type="Texture" id=1]
[ext_resource path="res://assets/images/buttons/loot_button_pressed.png" type="Texture" id=2]
[ext_resource path="res://assets/images/buttons/loot_button_hover.png" type="Texture" id=3]
[ext_resource path="res://assets/images/buttons/loot_button_normal.png" type="Texture" id=4]
[ext_resource path="res://assets/images/buttons/button.png" type="Texture" id=5]
[ext_resource path="res://ui/SmallerFont.tres" type="DynamicFont" id=6]
[ext_resource path="res://ui/LootSelect.gd" type="Script" id=7]

[sub_resource type="StyleBoxTexture" id=4]
texture = ExtResource( 3 )
region_rect = Rect2( 0, 2, 100, 96 )
margin_left = 20.0
margin_right = 20.0
margin_top = 18.0
margin_bottom = 17.0

[sub_resource type="StyleBoxTexture" id=5]
texture = ExtResource( 2 )
region_rect = Rect2( 0, 2, 100, 96 )
margin_left = 20.0
margin_right = 20.0
margin_top = 18.0
margin_bottom = 17.0

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxTexture" id=3]
texture = ExtResource( 4 )
region_rect = Rect2( 0, 2, 100, 96 )
margin_left = 20.0
margin_right = 20.0
margin_top = 18.0
margin_bottom = 17.0

[sub_resource type="StyleBoxTexture" id=6]
texture = ExtResource( 5 )
region_rect = Rect2( 0, 0, 171, 60 )
margin_left = 10.0
margin_right = 7.0
margin_top = 4.0
margin_bottom = 5.97078

[node name="Button" type="Button"]
margin_right = 100.0
margin_bottom = 100.0
rect_min_size = Vector2( 100, 100 )
focus_mode = 1
mouse_default_cursor_shape = 2
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 5 )
custom_styles/focus = SubResource( 2 )
custom_styles/disabled = SubResource( 3 )
custom_styles/normal = SubResource( 3 )
disabled = true
toggle_mode = true
enabled_focus_mode = 1
expand_icon = true
script = ExtResource( 7 )

[node name="Icon" type="TextureRect" parent="."]
show_behind_parent = true
anchor_left = 0.18
anchor_top = 0.18
anchor_right = 0.82
anchor_bottom = 0.82
mouse_filter = 2
texture = ExtResource( 1 )
expand = true
stretch_mode = 6

[node name="Amount" type="Label" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -44.0
margin_top = -32.0
margin_right = -4.0
margin_bottom = -2.02922
grow_horizontal = 0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 6 )
custom_styles/normal = SubResource( 6 )
text = "0"
align = 1

[connection signal="mouse_entered" from="." to="." method="_on_Button_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_Button_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_Button_pressed"]
